--- a/index.html
+++ b/index.html
@@ -20,50 +20,50 @@
         <link rel="stylesheet" href="public/css/style.min.css" />
     </head>
     <body>
-        <nav class="container">
-            <div class="hamburger">
+        <nav class="container nav">
+            <div class="nav_hamburger">
                 <div class="line"></div>
                 <div class="line"></div>
                 <div class="line"></div>
             </div>
-            <div class="language">
+            <div class="nav__language">
                 <div class="active">HR</div> | 
                 <div>EN</div> |
                 <div>IT</div>
             </div>
-            <div class="logo">
+            <div class="nav__logo">
                 <img src="img/logo/logo.png" alt="MGP logo" />
             </div>
-            <ul>
-                <li>
-                    <a href="#" class="navbar-item active">
-                        O nama
-                        <div class="dropdown"></div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="navbar-item">
-                        Odjea i zbirke
-                        <div class="dropdown"></div>
-                    </a>
-                </li>
-                <li><a href="#" class="navbar-item">Aktivnosti</a></li>
-                <li><a href="#" class="navbar-item">Stalni postav</a></li>
-                <li><a href="#" class="navbar-item">Edukacija</a></li>
-                <li><a href="#" class="navbar-item">Knjižnica</a></li>
-                <li><a href="#" class="navbar-item">Izdanja</a></li>
-            </ul>
+            <div class="nav__menu-lists">
+                <a href="#" class="nav__menu-items active">
+                    O nama
+                    <div class="dropdown"></div>
+                    <div class="nav__submenu--list nav__submenu--1-list">
+                        <div class="nav_submenu-items">Pazinski kaštel</div>
+                        <div class="nav_submenu-items">Povjest MGP</div>
+                        <div class="nav_submenu-items">Djelatnici</div>
+                        <div class="nav_submenu-items">Dokumenti</div>
+                        <div class="nav_submenu-items">Usluge</div>
+                        <div class="nav_submenu-items">Kontakt</div>
+                    </div>
+                </a>
+                <a href="#" class="nav__menu-items">
+                    Odjea i zbirke
+                    <div class="dropdown"></div>
+                </a>
+                <a href="#" class="nav__menu-items">Aktivnosti</a>
+                <a href="#" class="nav__menu-items">Stalni postav</a>
+                <a href="#" class="nav__menu-items">Edukacija</a>
+                <a href="#" class="nav__menu-items">Knjižnica</a>
+                <a href="#" class="nav__menu-items">Izdanja</a>
+            </div>
         </nav>
 
         <section 
             class="img-flex-back hero"
             style="background-image: url(img/banner/baner-pocetna.jpg)">
-            <!-- <img src="img/banner/baner-pocetna.jpg" alt="banner" /> -->
-            <!-- <img class="w3-image" src="img/banner/baner-pocetna.jpg" /> -->
-            <!-- <img class="w3-image img-flex-back" src="img/banner/baner-pocetna.jpg" /> -->
         </section>
 
-        <!-- <section class="container d-flex m-t-20 home-section-1"> -->
         <section class="container m-t-20 home-section-1">
             <aside>
                 <img src="https://via.placeholder.com/555x321" />
