--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         /> -->
 
         <link
-            href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800&display=swap"
+            href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
             rel="stylesheet"
         />
         <link rel="stylesheet" href="public/css/style.min.css" />
@@ -27,8 +27,10 @@
                 <div class="line"></div>
             </div>
             <div class="nav__language">
-                <div class="active">HR</div> | 
-                <div>EN</div> |
+                <div class="active">HR</div>
+                |
+                <div>EN</div>
+                |
                 <div>IT</div>
             </div>
             <div class="nav__logo">
@@ -50,6 +52,11 @@
                 <a href="#" class="nav__menu-items">
                     Odjea i zbirke
                     <div class="dropdown"></div>
+                    <div class="nav__submenu--list nav__submenu--2-list">
+                        <div class="nav_submenu-items">Kultutrno-povjesni odjel</div>
+                        <div class="nav_submenu-items">Povjesni odjel</div>
+                        <div class="nav_submenu-items">Galerijski odjel</div>
+                    </div>
                 </a>
                 <a href="#" class="nav__menu-items">Aktivnosti</a>
                 <a href="#" class="nav__menu-items">Stalni postav</a>
@@ -59,99 +66,103 @@
             </div>
         </nav>
 
-        <section 
-            class="img-flex-back hero"
-            style="background-image: url(img/banner/baner-pocetna.jpg)">
-        </section>
+        <section
+            class="img-flex-back w3-card-4 hero"
+            style="background-image: url(img/banner/baner-pocetna.jpg)"
+        ></section>
 
-        <section class="container m-t-20 home-section-1">
-            <aside>
-                <img src="https://via.placeholder.com/555x321" />
-            </aside>
-            <article>
-                <h3>Lorem ipsum dolor sit.</h3>
-                <h1>Lorem ipsum dolor sit.</h1>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, delectus
-                    praesentium, amet necessitatibus obcaecati doloremque odio harum deleniti
-                    officiis, quod nesciunt rem
-                </p>
-            </article>
-        </section>
+        <div class="container m-t-20">
+            <section class="w3-card-4 home-section-1">
+                <img class="img-flex" src="https://via.placeholder.com/555x321" />
+                <article>
+                    <h3 class="container-p40">Lorem ipsum dolor sit.</h3>
+                    <div class="container-p40">
+                        <h1 class="m-t-40 m-b-30">Lorem ipsum dolor sit.</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
+                            delectus praesentium, amet necessitatibus obcaecati doloremque odio
+                            harum deleniti officiis, quod nesciunt rem
+                        </p>
+                    </div>
+                </article>
+            </section>
+        </div>
 
-        <section class="container m-t-20 home-section-2">
-            <article>
-                <img src="https://via.placeholder.com/348x195" srcset="" />
-                <h3>Lorem ipsum dolor</h3>
-                <section>
-                    <h2>Lorem ipsum dolor</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae iste
-                        eligendi voluptatum
-                    </p>
-                </section>
-            </article>
-            <article>
-                <img src="https://via.placeholder.com/348x195" srcset="" />
-                <h3>Lorem ipsum dolor</h3>
-                <section>
-                    <h2>Lorem ipsum dolor</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae iste
-                        eligendi voluptatum
-                    </p>
-                </section>
-            </article>
-            <article>
-                <img src="https://via.placeholder.com/348x195" srcset="" />
-                <h3>Lorem ipsum dolor</h3>
-                <section>
-                    <h2>Lorem ipsum dolor sit.</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae iste
-                        eligendi voluptatum
-                    </p>
-                </section>
-            </article>
-        </section>
+        <div class="container m-t-20">
+            <section class="home-section-2">
+                <article class="w3-card-4">
+                    <img class="img-flex" src="https://via.placeholder.com/348x195" />
+                    <h3 class="container-p20">Lorem ipsum dolor</h3>
+                    <section class="container-p20">
+                        <h2 class="m-t-15">Lorem ipsum dolor</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae iste
+                            eligendi voluptatum
+                        </p>
+                    </section>
+                </article>
+                <article class="w3-card-4">
+                    <img class="img-flex" src="https://via.placeholder.com/348x195" srcset="" />
+                    <h3 class="container-p20">Lorem ipsum dolor</h3>
+                    <section class="container-p20">
+                        <h2 class="m-t-15">Lorem ipsum dolor</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae iste
+                            eligendi voluptatum
+                        </p>
+                    </section>
+                </article>
+                <article class="w3-card-4">
+                    <img class="img-flex" src="https://via.placeholder.com/348x195" srcset="" />
+                    <h3 class="container-p20">Lorem ipsum dolor</h3>
+                    <section class="container-p20">
+                        <h2 class="m-t-15">Lorem ipsum dolor sit.</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae iste
+                            eligendi voluptatum
+                        </p>
+                    </section>
+                </article>
+            </section>
+        </div>
 
-        <section class="m-t-40 home-section-3">
+        <section class="m-t-40 w3-card-4 home-section-3">
             <div class="container">
-                <article>
-                    <header>
+                <article class="container-p20">
+                    <header class="panel-m20">
                         <img src="img/info/info-lokacija.png" alt="" srcset="" />
-                        <h1>Lorem.</h1>
+                        <h1 class="d-inl-blok">Lorem.</h1>
                     </header>
                     <section>
                         <h2>Lorem, ipsum dolor.</h2>
-                        <p>
+                        <p class="color-inherit f-16">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque, sequi.
                         </p>
                     </section>
                 </article>
-                <article>
-                    <header>
+                <article class="container-p20">
+                    <header class="panel-m20">
                         <img src="img/info/info-rvrijeme.png" alt="" srcset="" />
-                        <h1>Lorem.</h1>
+                        <h1 class="d-inl-blok">Lorem.</h1>
                     </header>
                     <section>
                         <h2>Lorem, ipsum dolor.</h2>
-                        <p>
+                        <p class="color-inherit f-16">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque, sequi.
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque, sequi.
                         </p>
                     </section>
                 </article>
-                <article>
-                    <header>
+                <article class="container-p20">
+                    <header class="panel-m20">
                         <img src="img/info/info-ulaznice.png" alt="" srcset="" />
-                        <h1>ulaznice</h1>
+                        <h1 class="d-inl-blok">ulaznice</h1>
                     </header>
                     <section>
                         <h2>
                             Odrasli: 20 kn Studenti, djeca, umirovljenici: 10kn
                         </h2>
-                        <p>
+                        <p class="color-inherit f-16">
                             Stručna vodstva uz prethodnu najavu. Stručno vodstvo na HR jeziku: 50,00
                             kn / grupa Stručno vodstvo na EN jeziku: 100,00 kn / grupa
                         </p>
@@ -160,41 +171,45 @@
             </div>
         </section>
 
-        <section class="container m-t-40 home-section-4">
-            <article>
-                <h1>Lorem.</h1>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore culpa,
-                    laboriosam fugit accusamus et non.
-                </p>
-                <button>VIŠE</button>
-            </article>
-            <img src="https://via.placeholder.com/677x244" />
-        </section>
-
-        <section 
-            class="m-t-40 home-section-5 img-flex-back" 
-            style="background-image: url(img/banner/baner-pocetna-okastelu.jpg)"
-        >
-        <!-- <section class="m-t-40 home-section-5"> -->
-            <!-- <img src="img/banner/baner-pocetna-okastelu.jpg" alt="O kaštelu" /> -->
-            <div class="container">
-                <article>
-                    <section>
-                        <h1>Lorem, ipsum dolor.</h1>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-                            nobis, ducimus esse atque nesciunt aliquid libero nam officiis eaque
-                            consequuntur reprehenderit sapiente repellendus cumque, saepe molestiae
-                            nemo quo quos inventore amet cupiditate aperiam a repellat eius. At,
-                            autem doloremque, dolore distinctio maxime rem reprehenderit consectetur
-                            modi culpa, vitae beatae porro.
-                        </p>
-                    </sectio>
+        <section class="container m-t-40">
+            <div class="w3-card-4 home-section-4">
+                <article class="container-p20">
+                    <h1 class="m-t-20">Lorem.</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore culpa,
+                        laboriosam fugit accusamus et non.
+                    </p>
                     <button>VIŠE</button>
                 </article>
+                <img class="imf-flex" src="https://via.placeholder.com/677x244" />
             </div>
         </section>
+
+        <div class="w3-card-4">
+            <section
+                class="m-t-40 img-flex-back home-section-5"
+                style="background-image: url(img/banner/baner-pocetna-okastelu.jpg)"
+            >
+                <!-- <section class="m-t-40 home-section-5"> -->
+                <!-- <img src="img/banner/baner-pocetna-okastelu.jpg" alt="O kaštelu" /> -->
+                <div class="container h-100">
+                    <article class="container-p20 h-100 d-flex-v-center">
+                        <section>
+                            <h1>Lorem, ipsum dolor.</h1>
+                            <p class="color-inherit f-18">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+                                nobis, ducimus esse atque nesciunt aliquid libero nam officiis eaque
+                                consequuntur reprehenderit sapiente repellendus cumque, saepe
+                                molestiae nemo quo quos inventore amet cupiditate aperiam a repellat
+                                eius. At, autem doloremque, dolore distinctio maxime rem
+                                reprehenderit consectetur modi culpa, vitae beatae porro.
+                            </p>
+                        </section>
+                        <button>VIŠE</button>
+                    </article>
+                </div>
+            </section>
+        </div>
         <!-- <section class="m-t-40 home-section-5">
             <img src="img/banner/baner-pocetna-okastelu.jpg" alt="O kaštelu" />
             <div class="container">
