--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </head>
     <body>
         <nav class="w3-card-4">
-            <div class="container navbar f-xl-18">
+            <div id="navbar" class="container navbar f-xl-18">
                 <div class="language">
                     <div class="active">HR</div>
                     |
