--- a/index.html
+++ b/index.html
@@ -83,23 +83,29 @@
             </div>
         </nav>
 
-        <section class="w3-card-4 hero">
+        <section class="w3-card-4 banner hero">
             <!-- <img class="img-cover" src="img/banner/baner-pocetna.jpg" alt="" srcset="" /> -->
-            <picture class="banner">
+            <!-- <img class="img-cover" src="img/banner/baner-pocetna-768px.jpg" alt="" srcset="" /> -->
+
+            <picture>
                 <source media="(min-width: 1200px)" srcset="img/banner/baner-pocetna.jpg" />
                 <source
                     media="(min-width: 992px) and (max-width: 1199px)"
-                    srcset="img/banner/baner-pocetna-1200px.jpg"
+                    srcset="https://via.placeholder.com/1200x500"
                 />
+                <!-- srcset="img/banner/baner-pocetna-1200px.jpg" -->
                 <source
                     media="(min-width: 768px) and (max-width: 991px)"
                     srcset="https://via.placeholder.com/991x500"
                 />
+
                 <!-- <source
                     media="(min-width: 768px) and (max-width: 991px)"
                     srcset="img/banner/baner-pocetna-1200px.jpg"
                 /> -->
-                <img class="img-cover" srcset="img/banner/baner-pocetna-768px.jpg" />
+
+                <!-- <img class="img-cover" srcset="img/banner/baner-pocetna-768px.jpg" /> -->
+                <img class="img-cover" srcset="https://via.placeholder.com/768x260" />
                 <!-- <img class="img-fluid" srcset="img/banner/baner-pocetna-768px.jpg" /> -->
                 <!--<img class="img-fluid" srcset="img/head_large.jpeg" alt="…" /> -->
             </picture>
@@ -107,10 +113,12 @@
         <!-- class="img-flex-back w3-card-4 hero"
             style="background-image: url(img/banner/baner-pocetna.jpg)" -->
 
-        <section class="m-t-xs-20-xl-40 section-1">
-            <div class="w3-card-4 post-big">
-                <img class="img-flex" src="https://via.placeholder.com/555x321" />
-                <article>
+        <section class="container m-t-xs-20-xl-40 section-1">
+            <div class="w3-card-4 d-grid">
+                <div class="item-1">
+                    <img class="img-flex" src="img/post/post-big.png" />
+                </div>
+                <article class="item-2">
                     <h2 class="p-0-20 f-xs-18 post-title ">Lorem ipsum dolor sit.</h2>
                     <section class="p-20">
                         <h1 class="f-xs-32 f-m-22 f-l-30 f-xl-36 header-1">
@@ -132,7 +140,7 @@
         <section class="container m-t-xs-20-xl-40 gap-xs-20-x-l40 section-2">
             <article class="w3-card-4 post">
                 <!-- <img class="img-flex" src="https://via.placeholder.com/348x195" /> -->
-                <img class="img-cover" src="img/post/post-1.png" />
+                <img class="img-flex" src="img/post/post-1.png" />
                 <h2 class="p-0-20 content-2 post-title">Lorem ipsum dolor</h2>
                 <section class="p-20">
                     <h1 class="header-2">Lorem ipsum dolor</h1>
@@ -145,7 +153,7 @@
 
             <article class="w3-card-4 post">
                 <!-- <img class="img-flex" src="https://via.placeholder.com/348x195" /> -->
-                <img class="img-cover" src="img/post/post-1.png" />
+                <img class="img-flex" src="img/post/post-1.png" />
                 <h2 class="p-0-20 content-2 post-title">Lorem ipsum dolor</h2>
                 <section class="p-20">
                     <h1 class="header-2">Lorem ipsum dolor</h1>
@@ -158,7 +166,7 @@
 
             <article class="w3-card-4 post">
                 <!-- <img class="img-flex" src="https://via.placeholder.com/348x195" /> -->
-                <img class="img-cover" src="img/post/post-1.png" />
+                <img class="img-flex" src="img/post/post-1.png" />
                 <h2 class="p-0-20 content-2 post-title">Lorem ipsum dolor</h2>
                 <section class="p-20">
                     <h1 class="header-2">Lorem ipsum dolor</h1>
@@ -227,27 +235,23 @@
             <div class="w3-card-4 d-grid">
                 <!-- <div class="d-flex d-column space-between"> -->
                 <div class="item-1">
-                    <img class="img-cover" src="img/slider/slider-pocetna-zbirke-1.jpg" />
+                    <img class="img-flex" src="img/slider/slider-pocetna-zbirke-1.jpg" />
                 </div>
                 <div class="p-20 item-2">
                     <h1 class="header-1">Lorem, ipsum dolor.</h1>
-                    <p class="content1-1">
+                    <p class="content-1">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore culpa,
                         laboriosam fugit accusamus et non.
                     </p>
-                    <div class="btn-container item-2">
+                    <div class="btn-container">
                         <button class="btn btn-dark f-m-18">VIŠE</button>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="m-t-xs-20-xl-40 w3-card-4 section-5">
-            <!-- <section
-            class="w3-card-4 m-t-20 img-flex-back section-5"
-            style="background-image: url(img/banner/baner-pocetna-okastelu.jpg)"
-        > -->
-            <picture class="banner item-1">
+        <section class="m-t-xs-20-xl-40 section-5">
+            <div class="container banner w3-card-4 item-1">
                 <picture>
                     <source media="(min-width: 1200px)" srcset="img/banner/baner-pocetna.jpg" />
                     <source
@@ -256,9 +260,16 @@
                     />
                     <img class="img-cover" srcset="img/banner/baner-pocetna-768px.jpg" />
                 </picture>
-            </picture>
-            <div class="item-2 container">
-                <div class="p-20-0 item-1">
+            </div>
+
+            <!-- <section
+                class="w3-card-4 m-t-20 img-flex-back section-5"
+                style="background-image: url(img/banner/baner-pocetna-okastelu.jpg)"
+            > -->
+
+            <div class="container item-2">
+                <div class="p-20 w3-card-4 float-right">
+                    <!-- <div class="float-right"> -->
                     <h1 class="header-1-light">
                         Lorem, ipsum dolor.
                     </h1>
@@ -266,15 +277,15 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nobis,
                         ducimus esse atque nesciunt aliquid libero nam officiis eaque consequuntur
                         reprehenderit sapiente repellendus cumque, saepe molestiae nemo quo quos
-                        inventore amet cupiditate aperiam a repellat eius. At, autem doloremque,
-                        dolore distinctio maxime rem reprehenderit consectetur modi culpa, vitae
-                        beatae porro.
+                        inventore amet cupiditate aperiam a repellat eius. At, autem doloremque, dolore
+                        distinctio maxime rem reprehenderit consectetur modi culpa, vitae beatae porro.
                     </p>
                     <div class="btn-container">
                         <button class="btn btn-light f-m-18">VIŠE</button>
                     </div>
                 </div>
             </div>
+            <!-- </div> -->
         </section>
 
         <footer class="m-t-20">
