--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         /> -->
 
         <link
-            href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Open+Sans&display=swap"
+            href="https://fonts.googleapis.com/css?family=Lato:300,400,900|Open+San:400,700,800s&display=swap"
             rel="stylesheet"
         />
 
@@ -53,7 +53,7 @@
                 </dicv>
 
                 <div class="menu-lists">
-                    <a href="#" class="menu-items active">
+                    <a href="/index.html" class="menu-items active">
                         O nama
                         <div class="dropdown"></div>
                         <div class="submenu-lists submenu--1-list">
@@ -65,8 +65,8 @@
                             <div class="nav_submenu-items">Kontakt</div>
                         </div>
                     </a>
-                    <a href="#" class="menu-items">
-                        Odjea i zbirke
+                    <a href="/odjeli.html" class="menu-items">
+                        Odjli i zbirke
                         <div class="dropdown"></div>
                         <div class="submenu-lists submenu--2-list">
                             <div class="nav_submenu-items">Kultutrno-povjesni odjel</div>
@@ -84,32 +84,26 @@
         </nav>
 
         <section class="w3-card-4 banner hero">
-            <!-- <img class="img-cover" src="img/banner/baner-pocetna.jpg" alt="" srcset="" /> -->
-            <!-- <img class="img-cover" src="img/banner/baner-pocetna-768px.jpg" alt="" srcset="" /> -->
-
             <picture>
                 <source media="(min-width: 1200px)" srcset="img/banner/baner-pocetna.jpg" />
                 <source
                     media="(min-width: 992px) and (max-width: 1199px)"
-                    srcset="https://via.placeholder.com/1200x500"
+                    srcset="img/banner/baner-pocetna-1200px.jpg"
                 />
-                <!-- srcset="img/banner/baner-pocetna-1200px.jpg" -->
+                <!-- srcset="https://via.placeholder.com/1200x500" -->
                 <source
                     media="(min-width: 768px) and (max-width: 991px)"
                     srcset="https://via.placeholder.com/991x500"
                 />
 
-                <!-- <source
-                    media="(min-width: 768px) and (max-width: 991px)"
-                    srcset="img/banner/baner-pocetna-1200px.jpg"
-                /> -->
-
-                <!-- <img class="img-cover" srcset="img/banner/baner-pocetna-768px.jpg" /> -->
-                <img class="img-cover" srcset="https://via.placeholder.com/768x260" />
-                <!-- <img class="img-fluid" srcset="img/banner/baner-pocetna-768px.jpg" /> -->
-                <!--<img class="img-fluid" srcset="img/head_large.jpeg" alt="…" /> -->
+                <img class="img-cover" srcset="img/banner/baner-pocetna-768px.jpg" />
+                <!-- <img class="img-cover" srcset="https://via.placeholder.com/768x260" /> -->
             </picture>
+            <div class="header-hero">
+                <!-- odjeli i zbirke -->
+            </div>
         </section>
+
         <!-- class="img-flex-back w3-card-4 hero"
             style="background-image: url(img/banner/baner-pocetna.jpg)" -->
 
@@ -124,9 +118,6 @@
                         <h1 class="f-xs-32 f-m-22 f-l-30 f-xl-36 header-1">
                             Lorem, ipsum.
                         </h1>
-                        <!-- <h1 class="f-xs-32 f-m-22 f-l-30 f-xl-36 header-1">
-                            DEFINIRAJ NEDEFINIRANO
-                        </h1> -->
                         <p class="f-xs-18 content-1">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
                             delectus praesentium, amet necessitatibus obcaecati doloremque odio
@@ -233,10 +224,10 @@
 
         <section class="container m-t-xs-20-xl-40 p-0 text-center section-4">
             <div class="w3-card-4 d-grid">
-                <!-- <div class="d-flex d-column space-between"> -->
                 <div class="item-1">
                     <img class="img-flex" src="img/slider/slider-pocetna-zbirke-1.jpg" />
                 </div>
+
                 <div class="p-20 p-relative d-flex d-column justify-center item-2">
                     <h1 class="header-2">Lorem, ipsum dolor.</h1>
                     <p class="content-1">
@@ -262,11 +253,6 @@
                 </picture>
             </div>
 
-            <!-- <section
-                class="w3-card-4 m-t-20 img-flex-back section-5"
-                style="background-image: url(img/banner/baner-pocetna-okastelu.jpg)"
-            > -->
-
             <div class="container p-0 item-2">
                 <div class="p-20 w3-card-4 float-right">
                     <!-- <div class="float-right"> -->
@@ -289,7 +275,7 @@
             <!-- </div> -->
         </section>
 
-        <footer class="m-t-20">
+        <footer class="m-t-xs-20-xl-40">
             <div class="container text-center d-grid">
                 <div class="item-1">
                     <p class="m-0 content-4-footer">
