menu item width auto content

--- a/odjeli.html
+++ b/odjeli.html
@@ -36,7 +36,7 @@
                 </dicv>
 
                 <div class="menu-lists">
-                    <a href="/index.html" class="menu-items active">
+                    <a href="/index.html" class="menu-items">
                         O nama
                         <div class="dropdown"></div>
                         <div class="submenu-lists submenu--1-list">
