--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </dicv>
 
                 <div class="menu-lists">
-                    <a href="/index.html" class="menu-items active">
+                    <a href="/index.html" class="menu-items">
                         O nama
                         <div class="dropdown"></div>
                         <div class="submenu-lists submenu--1-list">
