odjeli.html final

--- a/odjeli.html
+++ b/odjeli.html
@@ -86,45 +86,45 @@
         </section>
 
         <section class="container m-t-xs-20-xl-40 section-6">
-            <div class="header-3 m-0 menu-item active">kulturno-povjesni odjel</div>
-            <div class="header-3 m-0 menu-item">povjesni odjel</div>
-            <div class="header-3 m-0 menu-item">galerijski odjel</div>
+            <div class="header-3 m-0 w3-card-4 menu-item active">kulturno-povjesni odjel</div>
+            <div class="header-3 m-0 w3-card-4 menu-item">povjesni odjel</div>
+            <div class="header-3 m-0 w3-card-4 menu-item">galerijski odjel</div>
         </section>
 
         <section class="container m-t-xs-20-xl-40 section-7">
-            <div class="menu-item">
+            <div class="menu-item w3-card-4">
                 <img class="img-cover" src="https://via.placeholder.com/350x350" alt="" srcset="" />
                 <div class="header-3 m-0">glazbena zbirka</div>
             </div>
-            <div class="menu-item">
+            <div class="menu-item w3-card-4">
                 <img class="img-cover" src="https://via.placeholder.com/350x350" alt="" srcset="" />
                 <div class="header-3 m-0">glazbena zbirka</div>
             </div>
-            <div class="menu-item">
+            <div class="menu-item w3-card-4">
                 <img class="img-cover" src="https://via.placeholder.com/350x350" alt="" srcset="" />
                 <div class="header-3 m-0">glazbena zbirka</div>
             </div>
-            <div class="menu-item">
+            <div class="menu-item w3-card-4">
                 <img class="img-cover" src="https://via.placeholder.com/350x350" alt="" srcset="" />
                 <div class="header-3 m-0">glazbena zbirka</div>
             </div>
-            <div class="menu-item">
+            <div class="menu-item w3-card-4">
                 <img class="img-cover" src="https://via.placeholder.com/350x350" alt="" srcset="" />
                 <div class="header-3 m-0">glazbena zbirka</div>
             </div>
-            <div class="menu-item">
+            <div class="menu-item w3-card-4">
                 <img class="img-cover" src="https://via.placeholder.com/350x350" alt="" srcset="" />
                 <div class="header-3 m-0">glazbena zbirka</div>
             </div>
-            <div class="menu-item">
+            <div class="menu-item w3-card-4">
                 <img class="img-cover" src="https://via.placeholder.com/350x350" alt="" srcset="" />
                 <div class="header-3 m-0">glazbena zbirka</div>
             </div>
-            <div class="menu-item">
+            <div class="menu-item w3-card-4">
                 <img class="img-cover" src="https://via.placeholder.com/350x350" alt="" srcset="" />
                 <div class="header-3 m-0">glazbena zbirka</div>
             </div>
-            <div class="menu-item">
+            <div class="menu-item w3-card-4">
                 <img class="img-cover" src="https://via.placeholder.com/350x350" alt="" srcset="" />
                 <div class="header-3 m-0">glazbena zbirka</div>
             </div>
